# pr2_placing

./: .gitignore  Estructura Clases.txt  README.md
src/beginner_tutorials/: CMakeLists.txt  package.xml
src/beginner_tutorials/scripts/: cliente.py  escuchador.py  hablador.py  sumaints.py
src/beginner_tutorials/srv/: sumaints.srv
src/memoria/: CMakeLists.txt  package.xml
src/memoria/launch/: buscar_superficie.launch  tuck_arms.launch  untuck_arms.launch
src/memoria/msg/: BaseDriverMsg.msg  ErrorMsg.msg  LookAtMsg.msg
src/memoria/pcl_solo/: CMakeCache.txt  CMakeLists.txt  Makefile  cloud_viewer  cmake_install.cmake  concavehull  convexhull  figura_1_0.01.pcd  figura_1_0.25.pcd  figura_1_0.4.pcd  figura_1_0.5.pcd  segmentarplano  simple_objects  viewer  viewerrgb
src/memoria/pcl_solo/pcds/: links pcds  obj2pcd  object_template1.pcd  object_template2.pcd  untitled.pcd
src/memoria/pcl_solo/src/: cloud_viewer.cpp  concavehull.cpp  convexhullregiongrowing.cpp  gripperfilter.cpp  logica parches planos.txt  regiongrowing.cpp  remove_gripper.cpp  simple_objects.cpp  stablesurface.cpp  stablesurface2.cpp  stablesurface3.cpp  viewer.cpp  viewerrgb.cpp
src/memoria/pcl_solo/src/Util/: Polymesh.cpp  Polymesh.h  Util.cpp  Util.h  Viewer.cpp  Viewer.h
src/memoria/pcl_solo/src/tutoriales/: convexhull.cpp  segmentarplano.cpp  surface_normals.cpp
src/memoria/rviz/: buscar_superficie.rviz  graspingtest.rviz  gripper_scanner.rviz  grippernode.rviz  self_filter.rviz
src/memoria/src/: BaseDriver.cpp  GoToPose.cpp  GripperDriver.cpp  LookAt.cpp  SearchSurface.cpp  basedrivertest.cpp  buscar_superficie.cpp  dragdropdemo.cpp  gotoposetest.cpp  graspingtest.cpp  gripper_scanner.cpp  gripperdrivertest.cpp  pickplace.cpp  placing.cpp  self_filter.cpp
src/memoria/srv/: BaseDriver.srv  GoToPose.srv  GripperDriver.srv  LookAt.srv  SearchSurface.srv
src/memoria2/: CMakeLists.txt  CONTROL DEL PR2  README.md  package.xml
src/memoria2/rviz/: getNewCloud.rviz  gripper_scanner.rviz  placing.rviz  placing_completo.rviz
src/memoria2/src/: RobotBaseDriver.h  RobotDriver.h  RobotGripperDriver.h  RobotHeadDriver.h  Util.h  place.cpp  place2.cpp  teleop_gripper.cpp  tf_test.cpp
src/mipr2_gazebo/: CMakeLists.txt  package.xml
src/mipr2_gazebo/config/: paddings.yaml
src/mipr2_gazebo/gazebo_grasp_plugin/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
src/mipr2_gazebo/gazebo_grasp_plugin3/: CMakeLists.txt  package.xml
src/mipr2_gazebo/launch/: mipr2.launch  moveit_demo.launch  pr2_mesa_cubo.launch  pr2_mesa_lata.launch  pr2_mesa_paralelepipedo.launch  pr2_moveit_mesa_cubo.launch  pr2_moveit_mesa_lata.launch  pr2_moveit_mesa_paralelepipedo.launch
src/mipr2_gazebo/robots/: pr2_default_controllers.launch  pr2_gazebo_fix.urdf.xacro  pr2_no_kinect_gazebo_fix.urdf.xacro  sensors_kinect.yaml
src/mipr2_gazebo/rviz/: segmentacion.rviz
src/mipr2_gazebo/scripts/: echo  gz-my-models  gz-spawn
src/mipr2_gazebo/src/: my_cube_spawner.cpp
src/mipr2_gazebo/worlds/: empty_world_fixed.launch  my_empty_world.world  my_empty_world_quick.world
src/moveit_tutoriales/: CMakeLists.txt  package.xml
src/moveit_tutoriales/launch/: testeando.launch  testeando.launch_1  testeando.launch_2  testeando_brazos.launch
src/moveit_tutoriales/src/: mover_brazo.cpp  testeando.cpp  testeando_brazos.cpp
src/movimiento_basico/: CMakeLists.txt  package.xml
src/movimiento_basico/src/: testeando_base.cpp  testeando_base_lowlevel.cpp  testeando_cabeza.cpp
src/pr2_config_files/: .setup_assistant  CMakeLists.txt  package.xml
src/pr2_config_files/config/: controllers.yaml  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  pr2.srdf
src/pr2_config_files/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  pr2_moveit_controller_manager.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
src/tutoriales_pcl/: Brainstorming.txt  CMakeLists.txt  package.xml
(+72 files in other folders)
